--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,6 +15,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: build
+      if: always()
       run: |
         sudo apt update && sudo apt install libfuse2
         wget https://raw.githubusercontent.com/ivan-hc/Olive-appimage-downloaded/main/olive-downloader
