--- a/.github/workflows/cronjob.yml
+++ b/.github/workflows/cronjob.yml
@@ -1,7 +1,8 @@
 name: Github Action with a cronjob trigger
 on:
-  schedule:
-    - cron: "0 0 * * *"
+  #schedule:
+  #  - cron: "0 0 * * *"
+  workflow_dispatch:  
 permissions:
   actions: write
 jobs:
